test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/double_subscript.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arr
                  CCompoundInit: 
                    List[3]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 4
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 5
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 6
                          None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 3
                    Int: 
                  None: 
            CS: 
              CReturn: 
                CSubscript: 
                  CVar: 
                    TIdentifier: arr
                    None: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 2.000000
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
